modified:   Zadania/Matematyczne/Srednia geometryczna.ipynb

--- a/Zadania/Matematyczne/Srednia geometryczna.ipynb
+++ b/Zadania/Matematyczne/Srednia geometryczna.ipynb
@@ -66,7 +66,7 @@
    "source": [
     "## Mapa Myśli\n",
     "\n",
-    "[Mapa myśli](/assets/image/Matematyczne/Srednia%20geometryczna.png)"
+    "![Mapa myśli](<../../assets/image/Matematyczne/Srednia geometryczna.png>)"
    ]
   }
  ],
