--- a/Zadania/Operator wycinania/Operator wycinania.ipynb
+++ b/Zadania/Operator wycinania/Operator wycinania.ipynb
@@ -11,7 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [Wprowadzenie](/Teoria/Operator%20wycinania.md)"
+    "[Wycinainie](/Teoria/Operator%20wycinania.md)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Wprowadzenie](../../Teoria/Operator%20wycinania.md)"
    ]
   },
   {
@@ -19,6 +26,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
