modified:   Zadania/Operator wycinania/Operator wycinania.ipynb

--- a/Zadania/Operator wycinania/Operator wycinania.ipynb
+++ b/Zadania/Operator wycinania/Operator wycinania.ipynb
@@ -11,14 +11,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Wycinainie](/Teoria/Operator%20wycinania.md)"
+    "[Wycinainie](/Teoria/Operator%20wycinania.md)\n",
+    "jhkjhk\n",
+    "hgjkhg"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Wprowadzenie](../../Teoria/Operator%20wycinania.md)"
+    "[Wprowadzenie](../../Teoria/Operator%20wycinania.md)\n",
+    "sdfdsfs\n",
+    "sdfsdf"
    ]
   }
  ],
