modified:   Zadania/Comprehensions/Comprehensions.ipynb

--- a/Zadania/Comprehensions/Comprehensions.ipynb
+++ b/Zadania/Comprehensions/Comprehensions.ipynb
@@ -86,7 +86,7 @@
     "# Zadanie\n",
     "\"\"\"\n",
     "Masz listę cen i musisz obliczyć średnią cenę dla pierwszego i ostatniego tygodnia miesiąca. \n",
-    "Pierwszy tydzień to pierwsze 5 elementów listy, a ostatni tydzień to ostatnie 5 elementów listy.\n",
+    "Pierwszy tydzień to pierwsze 5 elementów listy, a ostatni tydzień to ostatnie 5 elementów listy\n",
     "\"\"\"\n",
     "\n",
     "stock_prices = [\n",
