new file:   Teoria/Programowanie obiektowe/Programowanie Obiektowe w Pythonie.md 	modified:   Zadania/Comprehensions/Comprehensions.ipynb 	new file:   assets/image/Programowanie obiektowe/Programowanie Obiektowe w Pythonie.png

--- a/Zadania/Comprehensions/Comprehensions.ipynb
+++ b/Zadania/Comprehensions/Comprehensions.ipynb
@@ -119,6 +119,85 @@
     "print(f\"Average stock price for the first week: ${first_week_average:.2f}\")\n",
     "print(f\"Average stock price for the last week: ${last_week_average:.2f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "length = 10\n",
+      "width = 5\n",
+      "height = 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Zadanie\n",
+    "\n",
+    "dimensions = '10x5x2'\n",
+    "\n",
+    "# Wynik\n",
+    "\"\"\"\n",
+    "length = 10\n",
+    "width = 5\n",
+    "height = 2\n",
+    "\"\"\"\n",
+    "\n",
+    "wynik = dimensions.split('x')\n",
+    "\n",
+    "length = wynik[0]\n",
+    "width = wynik[1]\n",
+    "height = wynik[2]\n",
+    "\n",
+    "print(f\"length = {length}\")\n",
+    "print(f\"width = {width}\")\n",
+    "print(f\"height = {height}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "length = 55.0\n",
+      "width = 22.0\n",
+      "height = 1.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Zadanie\n",
+    "\n",
+    "\"\"\"\n",
+    "Twoim zadaniem jest wyodrębnienie wymiarów dla części na pierwszej \n",
+    "pozycji w drugiej zagnieżdżonej liście poniższej listy parts za pomocą operatora wycinania:\n",
+    "\n",
+    "length = 55.0\n",
+    "width = 22.0\n",
+    "height = 1.8\n",
+    "\"\"\"\n",
+    "\n",
+    "parts = [\n",
+    "    ['50x20x1.5', '25x10x1.0'],\n",
+    "    ['55x22x1.8', '30x15x1.2'],\n",
+    "    ['60x24x2.0', '35x20x1.5'],\n",
+    "]\n",
+    "\n",
+    "specific_parts = parts[1][0]\n",
+    "res_join = specific_parts.split('x')\n",
+    "\n",
+    "print(f\"length = {float(res_join[0])}\")\n",
+    "print(f\"width = {float(res_join[1])}\")\n",
+    "print(f\"height = {float(res_join[2])}\")"
+   ]
   }
  ],
  "metadata": {
