new file:   Teoria/Typy danych/Dane tekstowe.md

--- a/Zadania/Typy danych/Typy Danych.ipynb
+++ b/Zadania/Typy danych/Typy Danych.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Typy Danych\n",
     "\n",
-    "## [Typy Danych](../../Teoria/Typy%20danych.md)\n",
+    "## [Typy Danych](../../Teoria/Typy%20danych/Typy%20danych.md)\n",
     "\n",
     "## Zadania"
    ]
@@ -101,6 +101,79 @@
     "\n",
     "res = isinstance(my_flag, bool)\n",
     "print(f\"The variable is of boolean type: {res}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "<class 'str'>\n",
+      "<class 'list'>\n",
+      "<class 'str'>\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "followers = ['john', 'jane', 'jacob', 'jessica', 'jenny']\n",
+    "profile_picture = 'https://example.com/profile.jpg'\n",
+    "post_ids = [1, 2, 3, 4, 5]\n",
+    "bio = 'Travel enthusiast | Photographer | Nature lover'\n",
+    "timestamp = 1649499360\n",
+    "\n",
+    "\"\"\"\n",
+    "Oczekiwany wynik:\n",
+    "<class 'list'>\n",
+    "<class 'str'>\n",
+    "<class 'list'>\n",
+    "<class 'str'>\n",
+    "<class 'int'>\n",
+    "\"\"\"\n",
+    "\n",
+    "print(f\"{type(followers)}\")\n",
+    "print(f\"{type(profile_picture)}\")\n",
+    "print(f\"{type(post_ids)}\")\n",
+    "print(f\"{type(bio)}\")\n",
+    "print(f\"{type(timestamp)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "followers = ['john', 'jane', 'jacob', 'jessica', 'jenny']\n",
+    "profile_picture = 'https://example.com/profile.jpg'\n",
+    "post_ids = [1, 2, 3, 4, 5]\n",
+    "bio = 'Travel enthusiast | Photographer | Nature lover'\n",
+    "timestamp = 1649499360\n",
+    "\n",
+    "# Enter your solution here\n",
+    "\n",
+    "print(isinstance(followers, tuple))\n",
+    "print(isinstance(profile_picture, str))\n",
+    "print(isinstance(post_ids, list))\n",
+    "print(isinstance(bio, set))\n",
+    "print(isinstance(timestamp, float))"
    ]
   }
  ],
