new file:   Snippet/Snippet.ipynb 	new file:   Zadania/Programowanie obiektowe/Klasy.ipynb

--- a/Snippet/Snippet.ipynb
+++ b/Snippet/Snippet.ipynb
@@ -2,28 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 a\n",
+      "2 b\n",
+      "3 c\n"
+     ]
     }
    ],
    "source": [
-    "class Template:\n",
-    "    pass\n",
+    "# ZIP\n",
+    "list1 = [1, 2, 3]\n",
+    "list2 = ['a', 'b', 'c']\n",
     "\n",
-    "\n",
-    "template = Template()\n",
-    "\n",
-    "isinstance(template, Template)"
+    "for item1, item2 in zip(list1, list2):\n",
+    "    print(item1, item2)"
    ]
   }
  ],
