modified:   Zadania/Programowanie obiektowe/Klasy.ipynb

--- a/Zadania/Programowanie obiektowe/Klasy.ipynb
+++ b/Zadania/Programowanie obiektowe/Klasy.ipynb
@@ -189,6 +189,102 @@
     "    print(f\"Język: {book.language}, author: {\n",
     "          book.author}, tytuł: {book.title}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'author': 'Dan Brown', 'title': 'Inferno'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Book:\n",
+    "    pass\n",
+    "\n",
+    "book = Book()\n",
+    "book.__dict__\n",
+    "\n",
+    "book.__setattr__(\"author\", \"Dan Brown\")\n",
+    "book.title = \"Inferno\"\n",
+    "book.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'author': 'Dan Brown', 'title': 'Inferno'}\n",
+      "{'author': 'Dan Brown', 'title': 'The Da Vinci Code', 'year_of_publishment': 2003}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from turtle import title\n",
+    "\n",
+    "\n",
+    "class Book:\n",
+    "    language = \"ENG\"\n",
+    "    is_ebook = True\n",
+    "\n",
+    "    # title: str\n",
+    "    # author: str\n",
+    "\n",
+    "book_1 = Book()\n",
+    "book_2 = Book()\n",
+    "\n",
+    "book_1.author = \"Dan Brown\"\n",
+    "book_1.title = \"Inferno\"\n",
+    "\n",
+    "book_2.author = \"Dan Brown\"\n",
+    "book_2.title = \"The Da Vinci Code\"\n",
+    "book_2.year_of_publishment = 2003\n",
+    "\n",
+    "print(book_1.__dict__)\n",
+    "print(book_2.__dict__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Angels & Demons'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Book:\n",
+    "    language = \"ENG\"\n",
+    "    is_ebook = True\n",
+    "\n",
+    "    def set_title(self, title):\n",
+    "        self.title = title\n",
+    "\n",
+    "book = Book()\n",
+    "book.set_title(\"Angels & Demons\")\n",
+    "book.title\n"
+   ]
   }
  ],
  "metadata": {
@@ -207,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
