--- a/Zadania/Programowanie obiektowe/Klasy.ipynb
+++ b/Zadania/Programowanie obiektowe/Klasy.ipynb
@@ -210,6 +210,7 @@
     "class Book:\n",
     "    pass\n",
     "\n",
+    "\n",
     "book = Book()\n",
     "book.__dict__\n",
     "\n",
@@ -242,6 +243,7 @@
     "\n",
     "    # title: str\n",
     "    # author: str\n",
+    "\n",
     "\n",
     "book_1 = Book()\n",
     "book_2 = Book()\n",
@@ -281,9 +283,10 @@
     "    def set_title(self, title):\n",
     "        self.title = title\n",
     "\n",
+    "\n",
     "book = Book()\n",
     "book.set_title(\"Angels & Demons\")\n",
-    "book.title\n"
+    "book.title"
    ]
   }
  ],
@@ -303,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
