new file:   Teoria/Programowanie obiektowe/Dekoratory.md 	new file:   Zadania/Programowanie obiektowe/Dekoratory.ipynb

--- a/Zadania/Programowanie obiektowe/Klasy.ipynb
+++ b/Zadania/Programowanie obiektowe/Klasy.ipynb
@@ -121,20 +121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{}"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Book:\n",
     "    language = 'ENG'\n",
@@ -153,22 +142,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Język: PL, author: Mickiewicz\n",
-      "Język: PL, author: Mickiewicz\n",
-      "Język: PL, author: Mickiewicz\n",
-      "Język: PL, author: Mickiewicz, tytuł: sonety krymski\n",
-      "Język: PL, author: Mickiewicz, tytuł: Pan Tadeusz\n",
-      "Język: PL, author: Mickiewicz, tytuł: Konrad Wallenrod\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Book:\n",
     "    language = 'PL'\n",
@@ -192,20 +168,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'author': 'Dan Brown', 'title': 'Inferno'}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Book:\n",
     "    pass\n",
@@ -221,18 +186,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'author': 'Dan Brown', 'title': 'Inferno'}\n",
-      "{'author': 'Dan Brown', 'title': 'The Da Vinci Code', 'year_of_publishment': 2003}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from turtle import title\n",
     "\n",
@@ -261,20 +217,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Angels & Demons'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Book:\n",
     "    language = \"ENG\"\n",
@@ -287,6 +232,183 @@
     "book = Book()\n",
     "book.set_title(\"Angels & Demons\")\n",
     "book.title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Walidacja atrybutów\n",
+    "\n",
+    "class Phone:\n",
+    "    def __init__(self, price):\n",
+    "        self.price = price\n",
+    "\n",
+    "    def get_price(self):\n",
+    "        return self.price\n",
+    "    \n",
+    "    def set_price(self, price):\n",
+    "        if isinstance(price, (float, int)):\n",
+    "            self.price = price\n",
+    "        else:\n",
+    "            raise ValueError(\"Price must be a number\")\n",
+    "\n",
+    "phone = Phone(\"sds\")\n",
+    "phone.set_price(200)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dostęp za pomoca property tylko fget\n",
+    "\n",
+    "class Phone:\n",
+    "\n",
+    "    def __init__(self, price):\n",
+    "        self._price = price\n",
+    "\n",
+    "    def price(self):\n",
+    "        print(\"getting...\")\n",
+    "        return self._price\n",
+    "    \n",
+    "    price = property(fget=price)\n",
+    "\n",
+    "phone = Phone(1200)\n",
+    "phone.price\n",
+    "\n",
+    "## phone.price = 100 # error tylko do odczytu\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dostęp za pomoca property dodanie fset\n",
+    "\n",
+    "\n",
+    "class Phone:\n",
+    "\n",
+    "    def __init__(self, price):\n",
+    "        self._price = price\n",
+    "\n",
+    "    def get_price(self):\n",
+    "        print(\"getting...\")\n",
+    "        return self._price\n",
+    "    \n",
+    "    def set_price(self, price):\n",
+    "        if isinstance(price, (int, float)):\n",
+    "            if price >= 0:\n",
+    "                self._price = price\n",
+    "            else:\n",
+    "                raise ValueError(\"price must be positive\")\n",
+    "        else:\n",
+    "            raise TypeError(\"The price is not number\")\n",
+    "    \n",
+    "    price = property(fget=get_price, fset=set_price)\n",
+    "\n",
+    "\n",
+    "phone = Phone(1200)\n",
+    "phone.price\n",
+    "\n",
+    "phone.price = -100\n",
+    "phone.price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "getting...\n",
+      "setting...\n",
+      "getting...\n",
+      "deleting...\n",
+      "Help on class Phone in module __main__:\n",
+      "\n",
+      "class Phone(builtins.object)\n",
+      " |  Phone(price)\n",
+      " |\n",
+      " |  Opis Klasa Phone\n",
+      " |\n",
+      " |  Methods defined here:\n",
+      " |\n",
+      " |  __init__(self, price)\n",
+      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      " |\n",
+      " |  del_price(self)\n",
+      " |\n",
+      " |  get_price(self)\n",
+      " |\n",
+      " |  set_price(self, price)\n",
+      " |\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |\n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables\n",
+      " |\n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object\n",
+      " |\n",
+      " |  price\n",
+      " |      Dokumentacja z property\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dostęp za pomoca property dodanie del\n",
+    "\n",
+    "\n",
+    "class Phone:\n",
+    "    \"\"\"Opis Klasa Phone\"\"\"\n",
+    "    def __init__(self, price):\n",
+    "        self._price = price\n",
+    "\n",
+    "    def get_price(self):\n",
+    "        print(\"getting...\")\n",
+    "        return self._price\n",
+    "\n",
+    "    def set_price(self, price):\n",
+    "        if isinstance(price, (int, float)):\n",
+    "            if price >= 0:\n",
+    "                print(\"setting...\")\n",
+    "                self._price = price\n",
+    "            else:\n",
+    "                raise ValueError(\"price must be positive\")\n",
+    "        else:\n",
+    "            raise TypeError(\"The price is not number\")\n",
+    "        \n",
+    "    def del_price(self):\n",
+    "        print(\"deleting...\")\n",
+    "        del self._price\n",
+    "\n",
+    "    price = property(fget=get_price, fset=set_price, fdel=del_price, doc=\"Dokumentacja z property\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "phone = Phone(1200)\n",
+    "phone.price\n",
+    "\n",
+    "phone.price = 1000\n",
+    "phone.price\n",
+    "\n",
+    "del phone.price\n",
+    "# phone.price  # AttributeError: 'Phone' object has no attribute '_price'\n",
+    "\n",
+    "help(Phone)"
    ]
   }
  ],
@@ -306,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
