new file:   Teoria/Programowanie obiektowe/Property Gettery  Settery i Deletery.md

--- a/Zadania/Programowanie obiektowe/Dekoratory.ipynb
+++ b/Zadania/Programowanie obiektowe/Dekoratory.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "# Stworzymy dekorator, który przed wywołaniem dekorowanej funkcji wypisze komunikat \"Przed funkcją\" oraz \"Po funkcji\" po jej wywołaniu.\n",
     "\n",
-    "# Dekorator \n",
+    "# Dekorator\n",
     "\n",
     "def prosty_dekorator(funkcja):\n",
     "    def wrapper():\n",
@@ -42,11 +42,54 @@
     "\n",
     "# Funkcja do dekorowania\n",
     "\n",
+    "\n",
     "@prosty_dekorator\n",
     "def dekorowana_funkcja():\n",
     "    print(\"Działa\")\n",
     "\n",
+    "\n",
     "dekorowana_funkcja()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executing... wrapper\n",
+      "Czas wykonywania: 2.003092 sekund\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "\n",
+    "def timer(funkcja):\n",
+    "    def wrapper(sec):\n",
+    "        start_time = time.time()\n",
+    "        funkcja(sec)\n",
+    "        end_time = time.time()\n",
+    "        print(f\"Czas wykonywania: {end_time - start_time:4f} sekund\")\n",
+    "    return wrapper\n",
+    "\n",
+    "\n",
+    "@timer\n",
+    "def fake_sleep(sec):\n",
+    "    print(f\"Executing... {fake_sleep.__name__}\")\n",
+    "    time.sleep(sec)\n",
+    "\n",
+    "\n",
+    "# timer(fake_sleep)(3)\n",
+    "\n",
+    "# fake_sleep = timer(fake_sleep)\n",
+    "# fake_sleep(2)\n",
+    "\n",
+    "fake_sleep(2)"
    ]
   }
  ],
@@ -66,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
