--- a/Zadania/Programowanie obiektowe/Klasy.ipynb
+++ b/Zadania/Programowanie obiektowe/Klasy.ipynb
@@ -248,15 +248,16 @@
     "\n",
     "    def get_price(self):\n",
     "        return self.price\n",
-    "    \n",
+    "\n",
     "    def set_price(self, price):\n",
     "        if isinstance(price, (float, int)):\n",
     "            self.price = price\n",
     "        else:\n",
     "            raise ValueError(\"Price must be a number\")\n",
     "\n",
+    "\n",
     "phone = Phone(\"sds\")\n",
-    "phone.set_price(200)\n"
+    "phone.set_price(200)"
    ]
   },
   {
@@ -275,13 +276,14 @@
     "    def price(self):\n",
     "        print(\"getting...\")\n",
     "        return self._price\n",
-    "    \n",
+    "\n",
     "    price = property(fget=price)\n",
+    "\n",
     "\n",
     "phone = Phone(1200)\n",
     "phone.price\n",
     "\n",
-    "## phone.price = 100 # error tylko do odczytu\n"
+    "# phone.price = 100 # error tylko do odczytu"
    ]
   },
   {
@@ -301,7 +303,7 @@
     "    def get_price(self):\n",
     "        print(\"getting...\")\n",
     "        return self._price\n",
-    "    \n",
+    "\n",
     "    def set_price(self, price):\n",
     "        if isinstance(price, (int, float)):\n",
     "            if price >= 0:\n",
@@ -310,7 +312,7 @@
     "                raise ValueError(\"price must be positive\")\n",
     "        else:\n",
     "            raise TypeError(\"The price is not number\")\n",
-    "    \n",
+    "\n",
     "    price = property(fget=get_price, fset=set_price)\n",
     "\n",
     "\n",
@@ -323,56 +325,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "getting...\n",
-      "setting...\n",
-      "getting...\n",
-      "deleting...\n",
-      "Help on class Phone in module __main__:\n",
-      "\n",
-      "class Phone(builtins.object)\n",
-      " |  Phone(price)\n",
-      " |\n",
-      " |  Opis Klasa Phone\n",
-      " |\n",
-      " |  Methods defined here:\n",
-      " |\n",
-      " |  __init__(self, price)\n",
-      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      " |\n",
-      " |  del_price(self)\n",
-      " |\n",
-      " |  get_price(self)\n",
-      " |\n",
-      " |  set_price(self, price)\n",
-      " |\n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors defined here:\n",
-      " |\n",
-      " |  __dict__\n",
-      " |      dictionary for instance variables\n",
-      " |\n",
-      " |  __weakref__\n",
-      " |      list of weak references to the object\n",
-      " |\n",
-      " |  price\n",
-      " |      Dokumentacja z property\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# dostęp za pomoca property dodanie del\n",
     "\n",
     "\n",
     "class Phone:\n",
     "    \"\"\"Opis Klasa Phone\"\"\"\n",
+    "\n",
     "    def __init__(self, price):\n",
     "        self._price = price\n",
     "\n",
@@ -389,14 +351,13 @@
     "                raise ValueError(\"price must be positive\")\n",
     "        else:\n",
     "            raise TypeError(\"The price is not number\")\n",
-    "        \n",
+    "\n",
     "    def del_price(self):\n",
     "        print(\"deleting...\")\n",
     "        del self._price\n",
     "\n",
-    "    price = property(fget=get_price, fset=set_price, fdel=del_price, doc=\"Dokumentacja z property\")\n",
-    "\n",
-    "\n",
+    "    price = property(fget=get_price, fset=set_price,\n",
+    "                     fdel=del_price, doc=\"Dokumentacja z property\")\n",
     "\n",
     "\n",
     "phone = Phone(1200)\n",
@@ -410,6 +371,101 @@
     "\n",
     "help(Phone)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "setting...\n",
+      "Getting...\n",
+      "setting...\n",
+      "Getting...\n",
+      "Deleting...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Za pomocą property\n",
+    "\n",
+    "class Phone:\n",
+    "\n",
+    "    def __init__(self, price):\n",
+    "        self.price = price\n",
+    "\n",
+    "    @property\n",
+    "    def price(self):\n",
+    "        print(\"Getting...\")\n",
+    "        return self._price\n",
+    "\n",
+    "    @price.setter\n",
+    "    def price(self, price):\n",
+    "        if isinstance(price, (int, float)):\n",
+    "            if price >= 0:\n",
+    "                print(\"setting...\")\n",
+    "                self._price = price\n",
+    "            else:\n",
+    "                raise ValueError(\"price must be positive\")\n",
+    "        else:\n",
+    "            raise TypeError(\"The price is not number\")\n",
+    "\n",
+    "    @price.deleter\n",
+    "    def price(self):\n",
+    "        print(\"Deleting...\")\n",
+    "        del self._price\n",
+    "\n",
+    "\n",
+    "phone = Phone(200)\n",
+    "phone.price\n",
+    "\n",
+    "phone.price = 1200\n",
+    "phone.price\n",
+    "\n",
+    "del phone.price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3499\n",
+      "3999\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Phone():\n",
+    "    def __init__(self, price) -> None:\n",
+    "        self._price = price\n",
+    "\n",
+    "    def get_price(self):\n",
+    "        return self._price\n",
+    "\n",
+    "    def set_price(self, price):\n",
+    "        self._price = price\n",
+    "\n",
+    "\n",
+    "phone = Phone(3499)\n",
+    "print(phone.get_price())\n",
+    "phone.set_price(3999)\n",
+    "print(phone.get_price())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -428,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
