new file:   Teoria/Programowanie obiektowe/Metody specjalne.md

--- a/Zadania/Programowanie obiektowe/Dekoratory.ipynb
+++ b/Zadania/Programowanie obiektowe/Dekoratory.ipynb
@@ -91,6 +91,48 @@
     "\n",
     "fake_sleep(2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "txt\n",
+      "pdf\n",
+      "\n",
+      "png\n"
+     ]
+    }
+   ],
+   "source": [
+    "class FileUtils:\n",
+    "    @staticmethod\n",
+    "    def file_extension(filename: str) -> str:\n",
+    "        \"\"\"\n",
+    "        Zwraca rozszerzenie podanej nazwy pliku.\n",
+    "\n",
+    "        Args:\n",
+    "            filename (str): Nazwa pliku.\n",
+    "\n",
+    "        Returns:\n",
+    "            str: Rozszerzenie pliku (część nazwy pliku po kropce).\n",
+    "        \"\"\"\n",
+    "        parts = filename.split('.')\n",
+    "        if len(parts) > 1:\n",
+    "            return parts[-1]\n",
+    "        else:\n",
+    "            return ''\n",
+    "\n",
+    "\n",
+    "# Przetestowanie metody\n",
+    "filenames = ['file.txt', 'document.pdf', 'no_extension', 'image.png']\n",
+    "for filename in filenames:\n",
+    "    print(FileUtils.file_extension(filename))"
+   ]
   }
  ],
  "metadata": {
