new file:   Teoria/Programowanie obiektowe/Dziedziczenie.md

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Template:\n",
     "    pass\n",
@@ -24,6 +13,40 @@
     "template = Template()\n",
     "\n",
     "isinstance(template, Template)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "# Zdefiniuj URL strony, którą chcesz scrapować\n",
+    "url = \"https://aibit.pl/\"\n",
+    "\n",
+    "# Wykonaj żądanie HTTP i pobierz zawartość strony\n",
+    "response = requests.get(url)\n",
+    "soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "\n",
+    "# Znajdź wszystkie nagłówki h2 na stronie\n",
+    "h2_tags = soup.find_all('h2')\n",
+    "\n",
+    "# Wypisz tekst każdego nagłówka\n",
+    "for h2 in h2_tags:\n",
+    "    print(h2.text.strip())\n",
+    "\n",
+    "links = soup.find_all('a')\n",
+    "\n",
+    "# Stwórz słownik, aby przechowywać linki i ich tekst\n",
+    "link_data = {}\n",
+    "for link in links:\n",
+    "    link_data[link.text] = link.get('href')\n",
+    "\n",
+    "\n",
+    "print(link_data)"
    ]
   }
  ],
